file upload to s3

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ MONGO_URI =mongodb+srv://wardi:123@cluster0.bogujbb.mongodb.net/?retryWrites=tru
 
 JWT_SECRET = 'abc123'
 #PAYPAL_CLIENT_ID = your paypal client id s
+
+AWS_BUCKET_NAME=wardati
+AWS_BUCKET_REGION=me-central-1
+AWS_ACCESS_KEY_ID=AKIAVJD27CQY53BJTYML
+AWS_SECRET_KEY=SvHvsUKRIPOKGVay/4u8Bf72PNab4+Optf2PAnVD
