file upload to s3

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ PORT = 5000
 MONGO_URI =mongodb://127.0.0.1:27017
 JWT_SECRET = 'abc123'
 #PAYPAL_CLIENT_ID = your paypal client id s
+AWS_ACCESS_KEY_ID=AKIAVJD27CQY5RLFPCSZ
+AWS_SECRET_ACCESS_KEY=hFKYwZWJIKgv5UE0LjpWpbQoApm7H9rCzLVm+m7d
+AWS_BUCKET_NAME=wardathi-s3
